<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_copy"
        android:enabled="true"
        android:icon="@drawable/ic_content_copy_black_24dp"
        android:title="@string/text_copy"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_black_24dp"
        android:title="@string/text_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_previous"
        android:enabled="true"
        android:icon="@drawable/ic_keyboard_arrow_left_black_24dp"
        android:title="@string/text_previous"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_next"
        android:enabled="true"
        android:icon="@drawable/ic_keyboard_arrow_right_black_24dp"
        android:title="@string/text_next"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:enabled="true"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/text_share"
        app:showAsAction="ifRoom" />
</menu>