<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.rdevlab.pocketstoic.MainActivity"
    tools:showIn="@layout/app_bar_main">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvQuote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="40sp"
            android:text="@string/show_quote"
            android:textAlignment="center"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/tvAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20sp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="40sp"
            android:text="@string/show_author"
            android:textAlignment="textEnd"
            android:textSize="16sp" />
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/colorWhite"
        app:itemTextColor="@color/colorWhite"
        app:menu="@menu/bottom_navigation_main" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id"
        tools:layout_editor_absoluteY="-1dp"></com.google.android.gms.ads.AdView>

</RelativeLayout>